--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="nav">
-        <div><span>Name</span></div>
+        <div><span>Dashboard</span></div>
         <div class="nav1">
             <div>ICON</div>
             <div class="btn">Sign Up</div>
@@ -27,27 +27,27 @@
             </div>
         </div>
         <div class="profile1">
-            <div class="proimg"><img src=""></div>
+            <div class="proimg"><img src="https://media.istockphoto.com/id/1290743328/vector/faceless-man-abstract-silhouette-of-person-the-figure-of-man-without-a-face-front-view.jpg?s=612x612&w=0&k=20&c=Ys-4Co9NaWFFBDjmvDJABB2BPePxJwHugC8_G5u0rOk="></div>
             <div class="content">name</div>
             <div class="content">
-                <div><span>this year</span>$xx</div>
-                <div><span>this week</span>$xx</div>
+                <div><span>this year</span>$98k</div>
+                <div><span>this week</span>$5k</div>
             </div>
         </div>
         <div class="profile1">
-            <div class="proimg"><img src=""></div>
+            <div class="proimg"><img src="https://media.istockphoto.com/id/1290743328/vector/faceless-man-abstract-silhouette-of-person-the-figure-of-man-without-a-face-front-view.jpg?s=612x612&w=0&k=20&c=Ys-4Co9NaWFFBDjmvDJABB2BPePxJwHugC8_G5u0rOk="></div>
             <div class="content">name</div>
             <div class="content">
-                <div><span>this year</span>$xx</div>
-                <div><span>this week</span>$xx</div>
+                <div><span>this year</span>$70k</div>
+                <div><span>this week</span>$10k</div>
             </div>
         </div>
         <div class="profile1">
-            <div class="proimg"><img src=""></div>
+            <div class="proimg"><img src="https://media.istockphoto.com/id/1290743328/vector/faceless-man-abstract-silhouette-of-person-the-figure-of-man-without-a-face-front-view.jpg?s=612x612&w=0&k=20&c=Ys-4Co9NaWFFBDjmvDJABB2BPePxJwHugC8_G5u0rOk="></div>
             <div class="content">name</div>
             <div class="content">
-                <div><span>this year</span>$xx</div>
-                <div><span>this week</span>$xx</div>
+                <div><span>this year</span>$90k</div>
+                <div><span>this week</span>$10k</div>
             </div>
         </div>
     </div>
