--- a/main.html
+++ b/main.html
@@ -89,19 +89,19 @@
                         </div>
                         <div class="board4">
                             <div>Protein Powder</div>
-                            <div>$200</div>
+                            <div>$178</div>
                         </div>
                         <div class="board4">
                             <div>Protein bars</div>
-                            <div>$200</div>
+                            <div>$145</div>
                         </div>
                         <div class="board4">
                             <div>Multi vitamins</div>
-                            <div>$200</div>
+                            <div>$156</div>
                         </div>
                         <div class="board4">
                             <div>Amino</div>
-                            <div>$200</div>
+                            <div>$78</div>
                         </div>
                     </div>
                     <div class="board2">
@@ -109,20 +109,20 @@
                             <div>Best sellers</div>
                         </div>
                         <div class="board4">
-                            <div>Protein Powder</div>
-                            <div>$200</div>
+                            <div>Vegetable </div>
+                            <div>$143</div>
                         </div>
                         <div class="board4">
-                            <div>Protein bars</div>
-                            <div>$200</div>
+                            <div>Protein</div>
+                            <div>$197</div>
                         </div>
                         <div class="board4">
-                            <div>Multi vitamins</div>
-                            <div>$200</div>
+                            <div>Fruits</div>
+                            <div>$150</div>
                         </div>
                         <div class="board4">
-                            <div>Amino</div>
-                            <div>$200</div>
+                            <div>Dry Fruits</div>
+                            <div>$98</div>
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
             </div>
             <div class="board1">
                 <div>
-                    <h1>The Nutrition Store</h1>
+                    <h1>The Electric Store</h1>
                 </div>
                 <div class="baord5">
                     <div class="board2">
@@ -140,20 +140,20 @@
                             <div>Best sellers</div>
                         </div>
                         <div class="board4">
-                            <div>Protein Powder</div>
-                            <div>$200</div>
+                            <div>Phone</div>
+                            <div>$207</div>
                         </div>
                         <div class="board4">
-                            <div>Protein bars</div>
-                            <div>$200</div>
+                            <div>Laptop</div>
+                            <div>$290</div>
                         </div>
                         <div class="board4">
-                            <div>Multi vitamins</div>
-                            <div>$200</div>
+                            <div>Watch</div>
+                            <div>$198</div>
                         </div>
                         <div class="board4">
-                            <div>Amino</div>
-                            <div>$200</div>
+                            <div>tablet</div>
+                            <div>$137</div>
                         </div>
                     </div>
                     <div class="board2">
@@ -161,20 +161,20 @@
                             <div>Best sellers</div>
                         </div>
                         <div class="board4">
-                            <div>Protein Powder</div>
-                            <div>$200</div>
+                            <div>Washing Machine</div>
+                            <div>$178</div>
                         </div>
                         <div class="board4">
-                            <div>Protein bars</div>
-                            <div>$200</div>
+                            <div>T.V.</div>
+                            <div>$296</div>
                         </div>
                         <div class="board4">
-                            <div>Multi vitamins</div>
-                            <div>$200</div>
+                            <div>Fridge</div>
+                            <div>$298</div>
                         </div>
                         <div class="board4">
-                            <div>Amino</div>
-                            <div>$200</div>
+                            <div>Heater</div>
+                            <div>$189</div>
                         </div>
                     </div>
                 </div>
