--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="profile">
         <div class="profile1">
-            <div class="proimg"><img src=""></div>
+            <div class="proimg"><img src="https://media.istockphoto.com/id/1290743328/vector/faceless-man-abstract-silhouette-of-person-the-figure-of-man-without-a-face-front-view.jpg?s=612x612&w=0&k=20&c=Ys-4Co9NaWFFBDjmvDJABB2BPePxJwHugC8_G5u0rOk="></div>
             <div class="content">name</div>
             <div class="content">
                 <div><span>this year</span>$xx</div>
@@ -152,7 +152,7 @@
                             <div>$198</div>
                         </div>
                         <div class="board4">
-                            <div>tablet</div>
+                            <div>Tablet</div>
                             <div>$137</div>
                         </div>
                     </div>
