--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="proimg"><img src="https://media.istockphoto.com/id/1290743328/vector/faceless-man-abstract-silhouette-of-person-the-figure-of-man-without-a-face-front-view.jpg?s=612x612&w=0&k=20&c=Ys-4Co9NaWFFBDjmvDJABB2BPePxJwHugC8_G5u0rOk="></div>
             <div class="content">name</div>
             <div class="content">
-                <div><span>this year</span>$xx</div>
-                <div><span>this week</span>$xx</div>
+                <div><span>this year</span>$89k</div>
+                <div><span>this week</span>$6k</div>
             </div>
         </div>
         <div class="profile1">
