--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="profile">
         <div class="profile1">
             <div class="proimg"><img src="https://media.istockphoto.com/id/1290743328/vector/faceless-man-abstract-silhouette-of-person-the-figure-of-man-without-a-face-front-view.jpg?s=612x612&w=0&k=20&c=Ys-4Co9NaWFFBDjmvDJABB2BPePxJwHugC8_G5u0rOk="></div>
-            <div class="content">name</div>
+            <div class="content">John</div>
             <div class="content">
                 <div><span>this year</span>$89k</div>
                 <div><span>this week</span>$6k</div>
@@ -27,7 +27,7 @@
         </div>
         <div class="profile1">
             <div class="proimg"><img src="https://media.istockphoto.com/id/1290743328/vector/faceless-man-abstract-silhouette-of-person-the-figure-of-man-without-a-face-front-view.jpg?s=612x612&w=0&k=20&c=Ys-4Co9NaWFFBDjmvDJABB2BPePxJwHugC8_G5u0rOk="></div>
-            <div class="content">name</div>
+            <div class="content">Anna</div>
             <div class="content">
                 <div><span>this year</span>$98k</div>
                 <div><span>this week</span>$5k</div>
@@ -35,7 +35,7 @@
         </div>
         <div class="profile1">
             <div class="proimg"><img src="https://media.istockphoto.com/id/1290743328/vector/faceless-man-abstract-silhouette-of-person-the-figure-of-man-without-a-face-front-view.jpg?s=612x612&w=0&k=20&c=Ys-4Co9NaWFFBDjmvDJABB2BPePxJwHugC8_G5u0rOk="></div>
-            <div class="content">name</div>
+            <div class="content">Harry</div>
             <div class="content">
                 <div><span>this year</span>$70k</div>
                 <div><span>this week</span>$10k</div>
@@ -43,7 +43,7 @@
         </div>
         <div class="profile1">
             <div class="proimg"><img src="https://media.istockphoto.com/id/1290743328/vector/faceless-man-abstract-silhouette-of-person-the-figure-of-man-without-a-face-front-view.jpg?s=612x612&w=0&k=20&c=Ys-4Co9NaWFFBDjmvDJABB2BPePxJwHugC8_G5u0rOk="></div>
-            <div class="content">name</div>
+            <div class="content">Shane</div>
             <div class="content">
                 <div><span>this year</span>$90k</div>
                 <div><span>this week</span>$10k</div>
